--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
     }
   },
   "lint-staged": {
-    "*.ts": "npx tsc --noEmit",
-    "*.{js,jsx,ts,tsx, vue}": "npx eslint",
-    "*.{js,jsx,ts,tsx,html,css, vue}": "npx prettier --check"
+    "*.{ts, vue, js}": [
+      "prettier --write",
+      "eslint --fix",
+      "jest --findRelatedTests",
+      "git add"
+    ],
+    "*.{html,css,less,ejs,json}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
